--- a/src/main/webapp/brad07.html
+++ b/src/main/webapp/brad07.html
@@ -1,10 +1,20 @@
 <meta charset="UTF-8" />
-<form action="Brad07" method="post" >
+<form action="Brad08" method="post" >
 	Account: <input name="account" /><br />
 	Password: <input type="password" name="passwd" /><br />
 	Name: <input name="name" /><br />
 	Gender: 
 	<input type="radio" name="gender" value="m" checked />Male
 	<input type="radio" name="gender" value="f" />Female<br />
+	興趣:
+	<input type="checkbox" name="interest" value="1" />打電腦
+	<input type="checkbox" name="interest" value="2" />打電玩
+	<input type="checkbox" name="interest" value="3" />打籃球<br />
+	<input type="checkbox" name="interest" value="4" />打麻將
+	<input type="checkbox" name="interest" value="5" />打毛線
+	<input type="checkbox" name="interest" value="6" />打小孩<br />
+	
+	Birthday: <input type="date" name="birthday" /><br />
+	
 	<input type="submit" value="Register" />
 </form>
