--- a/src/main/webapp/brad53.html
+++ b/src/main/webapp/brad53.html
@@ -13,9 +13,10 @@
 						"orderId": $('#orderId').val()
 					},
 					success: function(order){
-						//console.log(order);
+						console.log(order);
 						$('#employee').html(order.employee);
 						$('#customer').html(order.customer);
+						$('#total').html(order.total);
 						
 						$('#table').empty();
 						$(order.details).each(
@@ -27,6 +28,7 @@
 										'<td>' + row.pname +'</td>' +
 										'<td>' + row.price +'</td>' +
 										'<td>' + row.qty +'</td>' +
+										'<td>' + row.sum +'</td>' +
 									'</tr>'
 								);								
 							}
@@ -46,6 +48,8 @@
 		Employee: <span id="employee"></span><br />
 		Customer: <span id="customer"></span><br />
 		<hr />
-		<table border="1" width="100%" id="table"></table>	
+		<table border="1" width="100%" id="table"></table>
+		<hr />
+		<div>Total: <span id="total"></span></div>	
 	</body>
 </html>
